make `ResultDTO.fetchDetailedFeedback` static and apply spotless